--- a/Sandbox/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Sandbox/en.lproj/MainStoryboard_iPhone.storyboard
@@ -58,7 +58,7 @@
                     <navigationItem key="navigationItem" title="Search List" id="ro1-73-FrA">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="edit" id="XrS-h9-Kmz">
                             <connections>
-                                <segue destination="8Gl-Or-gWC" kind="push" id="im9-Rc-O7Y"/>
+                                <segue destination="l2z-cT-aXT" kind="modal" identifier="Filters" id="gs8-dp-5Tj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -66,21 +66,45 @@
             </objects>
             <point key="canvasLocation" x="1123" y="-1091"/>
         </scene>
-        <scene sceneID="0Va-j9-1un">
+        <scene sceneID="BBE-aY-AKH">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eon-Bt-xZo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="8Gl-Or-gWC" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="fkf-ZF-HKS">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="fro-XF-KbL">
-                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="jAY-y0-l00"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QjB-eM-y44" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="Ryh-7j-j7k" customClass="FilterDetailsViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="6oz-Ub-a3c">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="fSL-pE-7iX">
+                                <rect key="frame" x="0.0" y="46" width="320" height="45"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="10" y="1" width="300" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Ryh-7j-j7k" id="gYs-RO-BHj"/>
+                            <outlet property="delegate" destination="Ryh-7j-j7k" id="ubi-ym-9Pn"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Filters" id="5dk-Lf-Gz2">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="qPX-Bj-I3O">
+                            <connections>
+                                <action selector="cancel:" destination="Ryh-7j-j7k" id="Sa0-UR-UDY"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="Rx3-HH-yEe">
+                            <connections>
+                                <action selector="done:" destination="Ryh-7j-j7k" id="67w-Th-H45"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
-                </viewController>
+                </tableViewController>
             </objects>
-            <point key="canvasLocation" x="1583" y="-1309"/>
+            <point key="canvasLocation" x="2110" y="-1290"/>
         </scene>
         <scene sceneID="lx7-kx-VLd">
             <objects>
@@ -171,16 +195,16 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9sv-s7-hBd" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="Pxm-2J-FDu" customClass="SavedViewController" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Uo6-GX-82C">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="Uo6-GX-82C">
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="fP4-mJ-M4x">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="fP4-mJ-M4x">
+                                <rect key="frame" x="0.0" y="46" width="320" height="46"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="10" y="1" width="280" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
@@ -196,8 +220,32 @@
             </objects>
             <point key="canvasLocation" x="1065" y="-405"/>
         </scene>
+        <scene sceneID="f1H-Iy-Ob1">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J3u-8w-QBS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="l2z-cT-aXT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Ph1-1i-8zR">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ryh-7j-j7k" kind="relationship" relationship="rootViewController" id="MLV-1L-crb"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="1584" y="-1290"/>
+        </scene>
     </scenes>
     <classes>
+        <class className="FilterDetailsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FilterDetailsViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="cancel:"/>
+                <relationship kind="action" name="done:"/>
+            </relationships>
+        </class>
         <class className="ResultCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ResultCell.h"/>
             <relationships>
